Shang New Live/src/objects/Deposit__c.object
<CustomObject>
    <description>Created for AMS process to manage Deposit Amount under a Lease Unit, will be linked to Lease Charge too.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Foreign__c</fullName>
        <label>Amount Paid (Foreign)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Local__c</fullName>
        <label>Amount Paid (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <inlineHelpText>Roll-up from related Cash Details</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <description>This is used to separate user data access.</description>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Foreign__c</fullName>
        <label>Deposit Amount (Foreign)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Local__c</fullName>
        <label>Deposit Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Formula_Type__c</fullName>
        <label>Deposit Formula Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Base Rent</fullName>
                </value>
                <value>
                    <fullName>By Area</fullName>
                </value>
                <value>
                    <fullName>By Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Index__c</fullName>
        <label>Deposit Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Rate__c</fullName>
        <label>Deposit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Type__c</fullName>
        <label>Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fit-out</fullName>
                </value>
                <value>
                    <fullName>Renovation</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Formula Description from related Lease Charge</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JV_Status__c</fullName>
        <label>JV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JV_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI Unit</label>
        <referenceTo>LOI_Unit__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI</label>
        <referenceTo>LOI__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <formula>if( Lease__r.Property__r.Landlord__c  != null , 
CASESAFEID(Lease__r.Property__r.Landlord__c ), 
CASESAFEID( LOI__r.Property__r.Landlord__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landlord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Show related Lease Unit&apos;s &gt; Lease Charges with Type as &apos;LOI&apos;</inlineHelpText>
        <label>Lease Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Lease_Charges__c.Lease_Unit__c</field>
                <operation>equals</operation>
                <valueField>$Source.Lease_Unit__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lease_Charges__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposit_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipName>Deposit_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Foreign__c</fullName>
        <label>Outstanding Amount (Foreign)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Local__c</fullName>
        <label>Outstanding Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <formula>(Deposit_Amount__c  -  Amount_Paid__c) -  Total_Refunded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Deposit Amount - Amount Paid) - Total Refunded Amount</inlineHelpText>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Currency_Code__c</fullName>
        <label>Last Refund Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <description>Deposit Date + 7 to be generated from system on creation</description>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>CASESAFEID(Lease_Unit__r.Lease_Agreement_No__r.Property__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lease Unit &gt; Lease Agreement &gt; Property</inlineHelpText>
        <label>Property ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <label>Last Refund Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Refund_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <inlineHelpText>Refund Status should be &apos;Requested&apos; with Requested Amount to Submit for an Approval</inlineHelpText>
        <label>Last Refund Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Refund_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Deposit__c</fullName>
        <formula>Amount_Paid__c  - Total_Refunded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount Paid - Total Refunded Amount</inlineHelpText>
        <label>Remaining Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status managed by Approval Process
In-Review, Approved and Rejected</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Balance</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <formula>if(Lease__r.Tenant__r.Name != null,
Lease__r.Tenant__r.Name,
LOI__r.Tenant__r.Name
)</formula>
        <label>Tenant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>CASESAFEID(Lease_Unit__r.Lease_Agreement_No__r.Tenant__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lease Unit &gt; Lease Agreement &gt; Tenant</inlineHelpText>
        <label>Tenant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Refunded_Amount__c</fullName>
        <description>Managed by Trigger on Deposit Refund</description>
        <inlineHelpText>Roll-up from related Deposit Refund</inlineHelpText>
        <label>Total Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Lease_Unit__r.Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <label>Deposit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Currency_Code__c</columns>
        <columns>Deposit_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Refunded_Amount__c</columns>
        <columns>Charge_Method__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Lease_Unit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deposit ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>